@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.arblib</groupId>
 	<artifactId>arb4j</artifactId>
@@ -30,30 +28,13 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.4.0</version>
 				<configuration>
+					<excludePackageNames>arb.biology</excludePackageNames>
 					<show>public</show>
 				</configuration>
 			</plugin>
 		</plugins>
 
 	</build>
-
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.4.0</version>
-				<configuration>
-					<additionalOptions>	
-						<option>--add-exports</option>
-						<option>ALL-UNNAMED=ALL-UNNAMED</option>
-					</additionalOptions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
-
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
